--- a/index.html
+++ b/index.html
@@ -8,6 +8,25 @@
   <title>Resume</title>
 </head>
 <body>
+  <div class="container">
+    <header class="top-info">
+      <img src="" alt="avatar">
+      <h1>Hello,</h1>
+      <h2 class="intro"></h2>
+    </header>
+    <main class="content">
+      <article class="about-me">
+        <h3>ABOUT ME</h3>
+        <p class="about-detail"></p>
+      </article>
+      <div class="edu">
+        <h3>EDUCATION</h3>
+        <ul class="edu-detail"></ul>
+      </div>
+    </main>
+  </div>
+  
+ 
   <script src="src/app.js"></script>
 </body>
 </html>
