--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <div class="container">
     <header class="top-info">
-      <img src="" alt="avatar">
+      <img class="avatar" alt="avatar">
       <h1>Hello,</h1>
       <h2 class="intro"></h2>
     </header>
@@ -21,7 +21,7 @@
       </article>
       <div class="edu">
         <h3>EDUCATION</h3>
-        <ul class="edu-detail"></ul>
+        <ul></ul>
       </div>
     </main>
   </div>
