--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport"
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <script src="https://cdn.bootcss.com/jquery/3.4.1/jquery.js"></script>
   <title>Resume</title>
 </head>
 <body>
@@ -25,7 +26,6 @@
       </div>
     </main>
   </div>
-  
  
   <script src="src/app.js"></script>
 </body>
