--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
       <h1>Hello,</h1>
       <h2 class="intro"></h2>
     </header>
+    <div>
+      <hr />
+    </div>
     <main class="content">
       <article class="about-me">
         <h3>ABOUT ME</h3>
