--- a/index.html
+++ b/index.html
@@ -1,35 +1,40 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="zh-Hans">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport"
-        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <script src="https://cdn.bootcss.com/jquery/3.4.1/jquery.js"></script>
-  <title>Resume</title>
-</head>
-<body>
-  <div class="container">
-    <header class="top-info">
-      <img class="avatar" alt="avatar">
-      <h1>Hello,</h1>
-      <h2 class="intro"></h2>
-    </header>
-    <div>
-      <hr />
-    </div>
-    <main class="content">
-      <article class="about-me">
-        <h3>ABOUT ME</h3>
-        <p class="about-detail"></p>
-      </article>
-      <div class="edu">
-        <h3>EDUCATION</h3>
-        <ul></ul>
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
+    />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <!--  // TODO feedback: 不建议这样引入jquery，采用npm去管理包-->
+    <script src="https://cdn.bootcss.com/jquery/3.4.1/jquery.js"></script>
+    <title>Resume</title>
+  </head>
+  <body>
+    <div class="container">
+      <header class="top-info">
+        <img class="avatar" alt="avatar" />
+        <h1>Hello,</h1>
+        <h2 class="intro"></h2>
+      </header>
+      <!--    // TODO feedback: 不建议使用hr，可以通过border去设置-->
+      <div>
+        <hr />
       </div>
-    </main>
-  </div>
- 
-  <script src="src/app.js"></script>
-</body>
+      <main class="content">
+        <!--      // TODO feedback: 为什么一个用了article，一个用了div呢？ -->
+        <article class="about-me">
+          <h3>ABOUT ME</h3>
+          <p class="about-detail"></p>
+        </article>
+        <div class="edu">
+          <h3>EDUCATION</h3>
+          <ul></ul>
+        </div>
+      </main>
+    </div>
+
+    <script src="src/app.js"></script>
+  </body>
 </html>
